--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section>
             <h2>Contact</h2>
-            <p>If you have any queries, you can contact me at ahtsayakvastu@gmail.com</p>
+            <p>If you have any queries, you can contact me at <div class="mail">ahtsayakvastu@gmail.com</div></p>
         </section>
 
         <footer>
