added div and created footer
made the website a bit better by adding footer and creating basic skeleton of home page

--- a/index.html
+++ b/index.html
@@ -4,34 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to my website</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Website</h1>
+        <p>Welcome to the website.</p>
     </header>
+
+    <nav>        
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact</a>
+    </nav>
 
     <main>
         <section>
-            <h2>About Me!</h2>
-            <p>Hey guys. It's me, Utsav Kayastha.</p>
+            <div class="about">
+                <div class="pic">
+                    <img src="https://support.squarespace.com/hc/article_attachments/360042365592" alt="Img">
+                </div>
+                <div class="about_text">
+                    <h1>About Me!</h1>
+                    <h2>sda</h2>
+                    <p>Hey guys. It's me, Utsav Kayastha.</p>
+                </div>
+            </div>
         </section>
 
         <section>
             <h2>Contact</h2>
             <p>If you have any queries, you can contact me at <div class="mail">ahtsayakvastu@gmail.com</div></p>
         </section>
-
-        <footer>
-            <p>&copy; 2023 My simple website.</p>
-        </footer>
     </main>
+
+    <footer>
+        <div class="foot_col">
+            <h2>Quick Links</h2>
+            alks
+            lsjd
+        </div>
+        <div class="foot_col">
+        <h2>About Us</h2>
+            alks
+            lsjd
+        </div>
+        <div class="foot_col">
+            <h2>Contact Us</h2>
+            alks
+            lsjd
+        </div>
+        <p>&copy;2024 My simple website.</p>
+    </footer>
 </body>
 </html>
