--- a/index.html
+++ b/index.html
@@ -25,36 +25,39 @@
                     <img src="https://support.squarespace.com/hc/article_attachments/360042365592" alt="Img">
                 </div>
                 <div class="about_text">
-                    <h1>About Me!</h1>
-                    <h2>sda</h2>
-                    <p>Hey guys. It's me, Utsav Kayastha.</p>
+                    <h1>Utsav Chandra Kayastha</h1>
+                    <h3>Something about me</h3>
+                    <p>Hey guys! It's me, Utsav Kayastha. I am currently a student. I love trying new things. I am fascinated by newer technologies. This website is a simple pet project to show some things about myself.
+                    </p>
                 </div>
             </div>
         </section>
-
-        <section>
-            <h2>Contact</h2>
-            <p>If you have any queries, you can contact me at <div class="mail">ahtsayakvastu@gmail.com</div></p>
-        </section>
     </main>
+
+    <hr>
 
     <footer>
         <div class="foot_col">
-            <h2>Quick Links</h2>
-            alks
-            lsjd
+            <h2>Phone</h2>
+            <p>+977 986 956 2922</p>
         </div>
         <div class="foot_col">
-        <h2>About Us</h2>
-            alks
-            lsjd
+        <h2>Email</h2>
+            <p>utsavkayastha.000@gmail.com</p>
         </div>
         <div class="foot_col">
-            <h2>Contact Us</h2>
-            alks
-            lsjd
+            <h2>Socials</h2>
+            <a href="https://www.facebook.com/utsav.kayastha"><img src = "Images/facebook.png" alt="fb_logo" class="social_logos"></a>
+            <a href="https://www.instagram.com/utsav.kayastha"><img src = "Images/instagram.png" alt="insta_logo" class="social_logos"></a>
+            <a href="https://www.linkedin.com/in/utsav-kayastha-05b69125a/"><img src = "Images/linkedin.png" alt="linkedin_logo" class="social_logos"></a>
+            <a href="https://github.com/UtsavCK"><img src = "Images/github.png" alt="github_logo" class="social_logos"></a>
+            <a href="https://wa.me/+9779869562922"><img src = "Images/whatsapp.png" alt="whatsapp_logo" class="social_logos"></a>
+            <a href="https://t.me/utsavck"><img src = "Images/telegram.png" alt="telegram_logo" class="social_logos"></a>
         </div>
-        <p>&copy;2024 My simple website.</p>
+        <hr>
+        <br>
+        &copy;2024 A simple website by Utsav Kayastha.<br>
+        Icons from <a href="https://icons8.com" target="_blank">icons8</a>
     </footer>
 </body>
 </html>
