--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>Website</h1>
-        <p>Welcome to the website.</p>
+        <p><b>UtsavCK</b></p>
+        <nav>        
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact</a>
+        </nav>
     </header>
 
-    <nav>        
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Contact</a>
-    </nav>
+    <hr>
 
     <main>
         <section>
@@ -59,5 +59,8 @@
         &copy;2024 A simple website by Utsav Kayastha.<br>
         Icons from <a href="https://icons8.com" target="_blank">icons8</a>
     </footer>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+    </style>
 </body>
 </html>
