--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section>
             <div class="about">
                 <div class="pic">
-                    <img src="https://support.squarespace.com/hc/article_attachments/360042365592" alt="Img">
+                    <img src="Images/me.jpg" alt="My pic">
                 </div>
                 <div class="about_text">
                     <h1>Utsav Chandra Kayastha</h1>
