--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     <h3>Something about me</h3>
                     <p>Hey guys! It's me, Utsav Kayastha. I am currently a student. I love trying new things. I am fascinated by newer technologies. This website is a simple pet project to show some things about myself.
                     </p>
+                    <a href="#"><button>About Me</button></a>
+                    <a href="#"><button>Resume</button></a>
+                    <a href="#"><button>Contact</button></a>
                 </div>
             </div>
         </section>
