--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Utsav Kayastha</title>
-    <link rel="icon" href="Images/uk.png" border-radius="25%">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>About Me | UtsavCK</title>
+    <link rel="icon" href="Images/uk.png">
+    <link rel="stylesheet" type="text/css"href="style.css">
 </head>
 <body>
     <header>
@@ -29,22 +29,21 @@
     <hr>
 
     <main>
-        <section>
-            <div class="intro">
-                <div class="pic">
-                    <img src="Images/me.jpg" alt="My pic">
-                </div>
-                <div class="about_text">
-                    <h1>Utsav Chandra Kayastha</h1>
-                    <h3>Something about me!</h3>
-                    <p>Hey guys! It's me, Utsav Kayastha. I am currently a student. I love trying new things and I am fascinated by new technologies. This website is a simple pet project to show some things about myself.
-                    </p>
-                    <br>
-                    <a href="./about"><button>About Me</button></a>
-                    <a href="#"><button>Resume</button></a>
-                    <a href="#"><button>Contact</button></a>
-                </div>
+        <section class="sidebar">
+            <h3>Utsav Kayastha</h3>
+            <div class="my_details">
+                <ul>
+                    <li>Student</li>
+                    <li>Bhaktapur</li>
+                    <li>utsavkayastha.000@gmail.com</li>
+                </ul>
             </div>
+        </section>
+        <section class="about_content">
+            <h2>Education</h2>
+        </section>
+        <section class="about_content">
+            <h2>Soft Skills</h2>
         </section>
     </main>
 
@@ -76,7 +75,6 @@
             Icons from <a href="https://icons8.com" target="_blank"><i>icons8</i></a>
         </section>
     </footer>
-    
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
     </style>
