Updated font size

--- a/about.html
+++ b/about.html
@@ -27,18 +27,20 @@
     </header>
 
     <hr>
-
-    <main>
-        <section class="sidebar">
-            <h3>Utsav Kayastha</h3>
-            <div class="my_details">
-                <ul>
-                    <li>Student</li>
-                    <li>Bhaktapur</li>
-                    <li>utsavkayastha.000@gmail.com</li>
-                </ul>
-            </div>
-        </section>
+    <aside>
+        <h3>Utsav Kayastha</h3>
+        <div class="my_details">
+            <ul>
+                <li>Student</li>
+                <li>Bhaktapur</li>
+                <li>utsavkayastha.000@gmail.com</li>
+            </ul>
+        </div>
+    </aside>
+    <main id="about_main">
+        <!-- <section class="sidebar"> -->
+        
+            <!-- </section> -->
         <section class="about_content">
             <h2>Education</h2>
         </section>
