--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <p><a href = "./"><b>UtsavCK</b></a></p>
         <nav>
-            <a href="#" class="toggle-btn">
+            <a href="" class="toggle-btn">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="about_text">
                     <h1>Utsav Chandra Kayastha</h1>
-                    <h3>Something about me!</h3>
+                    <h3>Few things about me!</h3>
                     <p>Hey guys! It's me, Utsav Kayastha. I am currently a student. I love trying new things and I am fascinated by new technologies. This website is a simple pet project to show some things about myself.
                     </p>
                     <br>
