Added vercel.json for clean URLs

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p>Hey guys! It's me, Utsav Kayastha. I am currently a student. I love trying new things and I am fascinated by new technologies. This website is a simple pet project to show some things about myself.
                     </p>
                     <br>
-                    <a href="./about"><button>About Me</button></a>
+                    <a href="about.html"><button>About Me</button></a>
                     <a href="#"><button>Resume</button></a>
                     <a href="#"><button>Contact</button></a>
                 </div>
