Added header.html and footer.html
Separated header and footer from file into their own html to dynamically load them into pages instead of copying the same code in every webpage

--- a/about.html
+++ b/about.html
@@ -8,23 +8,8 @@
     <link rel="stylesheet" type="text/css"href="style.css">
 </head>
 <body>
-    <header>
-        <p><a href = "./"><b>UtsavCK</b></a></p>
-        <nav>
-            <a href="#" class="toggle-btn">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </a>
-            <div class="navlinks">
-                <ul>
-                    <li><a href="./about.html">About Me</a></li>
-                    <li><a href="#">Resume</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>   
-            </div>
-        </nav>
-    </header>
+
+    <div id="header-placeholder"></div>
 
     <hr>
     <aside>
@@ -51,32 +36,8 @@
 
     <hr>
 
-    <footer>
-        <div class="foot_container">
-            <div class="foot_col">
-                <h2>Phone</h2>
-                <p>+977 986 956 2922</p>
-            </div>
-            <div class="foot_col">
-            <h2>Email</h2>
-                <p>utsavkayastha.000@gmail.com</p>
-            </div>
-            <div class="foot_col">
-                <h2>Socials</h2>
-                <a href="https://www.facebook.com/utsav.kayastha"><img src = "Images/facebook.png" alt="fb_logo" class="social_logos"></a>
-                <a href="https://www.instagram.com/utsav.kayastha"><img src = "Images/instagram.png" alt="insta_logo" class="social_logos"></a>
-                <a href="https://www.linkedin.com/in/utsav-kayastha-05b69125a/"><img src = "Images/linkedin.png" alt="linkedin_logo" class="social_logos"></a>
-                <a href="https://wa.me/+9779869562922"><img src = "Images/whatsapp.png" alt="whatsapp_logo" class="social_logos"></a>
-                <a href="https://t.me/utsavck"><img src = "Images/telegram.png" alt="telegram_logo" class="social_logos"></a>
-            </div>
-        </div>
-        <hr>
-        <br>
-        <section>
-            &copy;2024 A simple website by Utsav Kayastha.<br>
-            Icons from <a href="https://icons8.com" target="_blank"><i>icons8</i></a>
-        </section>
-    </footer>
+    <div id="footer-placeholder"></div>
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
     </style>
