--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <br>
                     <a href="about.html"><button>About Me</button></a>
                     <a href="#"><button>Resume</button></a>
-                    <a href="#"><button>Contact</button></a>
+                    <a href="contact.html"><button>Contact</button></a>
                 </div>
             </div>
         </section>
