--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
             <ul>
                 <li><a href="./about.html">About Me</a></li>
                 <li><a href="#">Resume</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>   
         </div>
     </nav>
