added todo list in project tab

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </p>
                     <br>
                     <a href="about.html"><button>About Me</button></a>
-                    <a href="#"><button>Resume</button></a>
+                    <a href="projects.html"><button>Projects</button></a>
                     <a href="contact.html"><button>Contact</button></a>
                 </div>
             </div>
