--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
         <div class="navlinks">
             <ul>
                 <li><a href="./about.html">About Me</a></li>
-                <li><a href="#">Resume</a></li>
+                <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>   
         </div>
