Updated contact.html and changed color scheme

--- a/index.html
+++ b/index.html
@@ -14,32 +14,26 @@
     <hr>
 
     <main>
-        <section>
-            <div class="intro">
-                <div class="pic">
-                    <img src="Images/me.jpg" alt="My pic">
-                </div>
-                <div class="about_text">
-                    <h1>Utsav Chandra Kayastha</h1>
-                    <h3>Few things about me!</h3>
-                    <p>Hey guys! It's me, Utsav Kayastha. I am currently a student. I love trying new things and I am fascinated by new technologies. This website is a simple pet project to show some things about myself.
-                    </p>
-                    <br>
-                    <a href="about.html"><button>About Me</button></a>
-                    <a href="projects.html"><button>Projects</button></a>
-                    <a href="contact.html"><button>Contact</button></a>
-                </div>
+        <div class="intro">
+            <div class="pic">
+                <img src="Images/me.jpg" alt="Utsav Chandra Kayastha">
             </div>
-        </section>
+            <div class="about_text">
+                <h1>Utsav Chandra Kayastha</h1>
+                <h3>Few things about me!</h3>
+                <p>Hey guys! It's me, Utsav Kayastha. I am currently a student. I love trying new things and I am fascinated by new technologies. This website is a simple pet project to show some things about myself.</p>
+                <br>
+                <a href="about.html"><button>About Me</button></a>
+                <a href="projects.html"><button>Projects</button></a>
+                <a href="contact.html"><button>Contact</button></a>
+            </div>
+        </div>    
     </main>
 
     <hr>
 
     <div id="footer-placeholder"></div>
     
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-    </style>
     <script src="script.js"></script>
 </body>
 </html>
