--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Utsav Kayastha</title>
+    <title>Contact | UtsavCK</title>
     <link rel="icon" href="Images/uk.png" border-radius="25%">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -14,34 +14,26 @@
     <hr>
 
     <main>
-        <section>
+        <div class="contact-container">
             <div class="contact-left">
-                <h1>Get In Touch!</h1>
-                <p>Looking forward to hearing from you.</p>
+                <h2>Get In Touch</h2>
+                <p>Feel free to reach out to me!</p>
             </div>
             <div class="contact-right">
-                <form id="contact">
-                    <label for="name">Full Name:</label><br>
-                    <input type="text" id="name" required><br>
-                    <label for="email">E-mail:</label><br>
-                    <input type="email" id="email" required><br>
-                    <label for="subject">Subject:</label><br>
-                    <input type="text" id="subject" required><br>
-                    <label for="message">Message:</label><br>
-                    <textarea name="message" placeholder="Your Message..." required></textarea><br>
-                    <button type="submit" value="submit">Submit</button>
+                <form class="contact-form" action="your-action-url" method="POST">
+                    <input type="text" name="name" placeholder="Your Name" required />
+                    <input type="email" name="email" placeholder="Your Email" required />
+                    <textarea name="message" placeholder="Your Message" required></textarea>
+                    <button type="submit" class="submit-btn">Send Message</button>
                 </form>
             </div>
-        </section>
+        </div>
     </main>
 
     <hr>
 
     <div id="footer-placeholder"></div>
     
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-    </style>
     <script src="script.js"></script>
 </body>
 </html>
