--- a/projects.html
+++ b/projects.html
@@ -19,24 +19,21 @@
             <div class="projects-container">
               <!-- Project 1 -->
               <div class="project-card">
-                <img src="project1-thumbnail.jpg" alt="Project 1 Thumbnail">
-                <h3>Project 1</h3>
-                <p>A brief description of what this project does or its main features.</p>
+                <h3>To-do List</h3>
+                <p>A handy to-do list that retains tasks in your browser for future use.</p>
                 <a href="/todo-list" target="_blank" class="project-link">View Project</a>
               </div>
               <!-- Project 2 -->
               <div class="project-card">
-                <img src="project2-thumbnail.jpg" alt="Project 2 Thumbnail">
-                <h3>Project 2</h3>
-                <p>A brief description of what this project does or its main features.</p>
-                <a href="https://project2.vercel.app" target="_blank" class="project-link">View Project</a>
+                <h3>Portfolio website</h3>
+                <p>Personal website that successfully highlight projects and accomplishments.</p>
+                <a href="./" target="_blank" class="project-link">View Project</a>
               </div>
               <!-- Project 3 -->
               <div class="project-card">
-                <img src="project3-thumbnail.jpg" alt="Project 3 Thumbnail">
-                <h3>Project 3</h3>
-                <p>A brief description of what this project does or its main features.</p>
-                <a href="https://project3.vercel.app" target="_blank" class="project-link">View Project</a>
+                <h3>Coming Soon..</h3>
+                <p>Stay tuned for upcoming projects</p>
+                <!-- <a href="" target="_blank" class="project-link">View Project</a> -->
               </div>
             </div>
           </section>          
