Changed vercel.json to rewrite instead or redirect

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
               <div class="project-card">
                 <h3>To-do List</h3>
                 <p>A handy to-do list that retains tasks in your browser for future use.</p>
-                <a href="/todo-list" target="_blank" class="project-link">View Project</a>
+                <a href="/projects/todo-list" target="_blank" class="project-link">View Project</a>
               </div>
               <!-- Project 2 -->
               <div class="project-card">
