--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <p>Feel free to reach out to me!</p>
             </div>
             <div class="contact-right">
-                <form class="contact-form" action="your-action-url" method="POST">
+                <form class="contact-form">
                     <input type="text" name="name" placeholder="Your Name" required />
                     <input type="email" name="email" placeholder="Your Email" required />
                     <textarea name="message" placeholder="Your Message" required></textarea>
@@ -34,6 +34,8 @@
 
     <div id="footer-placeholder"></div>
     
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="script.js"></script>
+    
 </body>
 </html>
