added about, cv, racircle, separated emailjs from script and fixed header toggle

--- a/about.html
+++ b/about.html
@@ -12,25 +12,73 @@
     <div id="header-placeholder"></div>
 
     <hr>
-    <aside>
-        <h3>Utsav Kayastha</h3>
-        <div class="my_details">
-            <ul>
-                <li>Student</li>
-                <li>Bhaktapur</li>
-                <li>utsavkayastha.000@gmail.com</li>
-            </ul>
-        </div>
-    </aside>
+
     <main id="about_main">
-        <!-- <section class="sidebar"> -->
         
-            <!-- </section> -->
-        <section class="about_content">
-            <h2>Education</h2>
+        <!-- </section> -->
+        <div class="download-cv">
+            <button id="download-cv-btn">Download CV</button>
+        </div>
+
+        <section class="card">
+            <h2>Experience</h2>
+            <div class="details">
+                <div>
+                    <h3>Hult Prize at KhCE | StartUps Coordinator</h3>
+                    <p>Assisted with the event planning process as the startup’s coordinator.</p>
+                </div>
+            </div>
         </section>
-        <section class="about_content">
-            <h2>Soft Skills</h2>
+
+        <section class="card">
+            <h2>Hackathon Experiences</h2>
+            <div class="details">
+                <div>
+                    <h3>Hack The Circle, 2024</h3>
+                    <p>Participated in HackTheCircle organized at KhCE and created a platform for youths to volunteer towards cultural preservation with team.</p>
+                </div>
+            </div>
+            <div class="details">
+                <div>
+                    <h3>Codewave, 2024</h3>
+                    <p>Participated in Codewave organized at KU and helped to create a legal chatbot that helps general public to learn about laws through interaction.</p>
+                </div>
+            </div>
+            <div class="details">
+                <div>
+                    <h3>Hult Prize at IOE, 2023</h3>
+                    <p>Participated in Hult Prize and made it to the semi-finals.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="card">
+            <h2>Education</h2>
+            <div class="details">
+                <div>
+                    <h3>Bachelor's in Compuer Engineering</h3>
+                    <p>Khwopa College of Engineering</p>
+                </div>
+            </div>
+            <div class="details">
+                <div>
+                    <h3>Higher Secondary Education</h3>
+                    <p>Khwopa Higher Secondary School</p>
+                </div>
+            </div>
+            <div class="details">
+                <div>
+                    <h3>SEE</h3>
+                    <p>Nobel Academy</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="card">
+            <h2>Skills & Expertise</h2>
+            <p><b>Frontend technologies:</b> HTML/CSS/JS, ReactJS, Vite</p>
+            <p><b>Languages:</b> JavaScript, Python, C, C++, SQL</p>
+            <p><b>Soft Skills:</b> Problem Solving, Communication, Teamwork, Detail-Oriented</p>
         </section>
     </main>
 
