--- a/header.html
+++ b/header.html
@@ -1,13 +1,14 @@
 <header>
     <p><a href = "./"><b>UtsavCK</b></a></p>
     <nav>
-        <a href="" class="toggle-btn">
+        <a href="#" class="toggle-btn">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
         </a>
         <div class="navlinks">
             <ul>
+                <li><a href="./">Home</a></li>
                 <li><a href="./about.html">About Me</a></li>
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./contact.html">Contact</a></li>
